// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiEmptyPrompt is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge testClass1 testClass2 css-7iihzj-euiPanel-m-transparent"
  data-test-subj="test subject string"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span
        color="subdued"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <h2
          class="euiTitle css-1w464ad-euiTitle-m"
        >
          Title
        </h2>
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
          />
          <div
            class="euiText css-h22ihx-euiText-m"
          >
            <p>
              Body
            </p>
          </div>
        </span>
        <div
          class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
        />
        <div>
          Actions
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <div
          class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
        />
        actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <div
          class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            action1
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            action2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props body renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText css-h22ihx-euiText-m"
          >
            body
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--accent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-18gz4sh-euiPanel-m-accent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-6vlqt7-euiPanel-m-danger"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-1l0v6gd-euiPanel-m-plain-hasShadow"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-385eid-euiPanel-m-primary"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-1v3b2de-euiPanel-m-subdued"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color success is rendered 1`] = `
<div
  class="euiPanel euiPanel--success euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-1ojco51-euiPanel-m-success"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--warning euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-1d4u1pi-euiPanel-m-warning"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props footer renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
  <div
    class="euiEmptyPrompt__footer"
  >
    footer
  </div>
</div>
`;

exports[`EuiEmptyPrompt props icon renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span>
        Custom icon
      </span>
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span
        color="subdued"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders with iconColor 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span
        color="danger"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props layout renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingMedium css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingSmall css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props styles are rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
  style="background:yellow;min-width:200px;max-width:600px"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props title renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-7iihzj-euiPanel-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <div
          class="euiTitle css-1w464ad-euiTitle-m"
        >
          title
        </div>
      </div>
    </div>
  </div>
</div>
`;
